--- a/hello/package.json
+++ b/hello/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@kgpark1399/hello",
+	"name": "@kgpark1399/test",
 	"version": "1.0.1",
 	"description": "",
 	"main": "index.js",
@@ -13,7 +13,7 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/kgpark1399/test/hello"
+		"url": "https://github.com/kgpark1399/test"
 	},
 	"publishConfig": {
 		"registry": "https://npm.pkg.github.com"
